# presence-switch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml  package.yml
packaging/linux/rpm/: presence-switch.spec
packaging/linux/systemd/: presence-switch.service
scripts/: package.ps1  package.sh
src/: discord.rs  main.rs  windows.rs
src/discord/: api.rs
src/discord/ipc/: error.rs  mod.rs  unix.rs  windows.rs
src/switch/ipc/: error.rs  mod.rs  unix.rs  windows.rs
wix/: main.wxs
