[package]
name = "presence-switch"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time", "tracing", "windows-sys"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
windows-sys = "0.61.2"
