[package]
name = "presence-switch"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time", "tracing", "windows-sys"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
windows-sys = "0.61.2"
