[package]
name = "presence-switch"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Discord Rich Presence IPC proxy that multiplexes RPC messages across multiple Discord instances"
repository = "https://github.com/kramerc/presence-switch"

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time", "tracing", "windows-sys"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows-sys = "0.61.2"

# RPM packaging via cargo-generate-rpm.
# `name`, `version`, `license`, and `summary` are inherited from [package].
# Override `release` at build time for dev builds:
#   cargo generate-rpm -s 'release = "0.dev.<N>.git<SHA>"'
[package.metadata.generate-rpm]
release = "1"
assets = [
    { source = "target/release/presence-switch", dest = "/usr/bin/presence-switch", mode = "755" },
    { source = "packaging/linux/systemd/presence-switch.service", dest = "/usr/lib/systemd/user/presence-switch.service", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/presence-switch/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/presence-switch/README.md", mode = "644", doc = true },
]
